#21 - swagger test store
